--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,11 @@
   <title>AutomaticCertificateGenerator</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="./assets/css/style.css">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
   <app-root></app-root>
+  <script type="text/javascript" src="./assets/js/main.js"></script>
 </body>
 </html>
