--- a/src/index.html
+++ b/src/index.html
@@ -13,5 +13,11 @@
   <app-root></app-root>
   <script type="text/javascript" src="./assets/js/main.js"></script>
   <script type="text/javascript" src="./assets/js/main1.js"></script>
+  <script>
+    $("#button").click(function() {  
+     $("#box form").toggle("slow");
+      return false;
+    });
+  </script>
 </body>
 </html>
